<resources>
    <string name="app_name">Admin Rural Caravan</string>
    <string name="title_activity_main">Rural Caravan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="new_enquiry_english">New Enquiry</string>
    <string name="material_sent_english">Material Sent</string>
    <string name="complete_construction_english">Complete Construction</string>
    <string name="technician_information_english">Technician Information</string>
    <string name="technician_list_english">Technician List</string>
    <string name="about_english">About</string>
    <string name="village_english">Village</string>
    <string name="age_english">Age: </string>
    <string name="aadharno_english">Aadhar No</string>
    <string name="date_of_enquiry_english">Date of Enquiry</string>
    <string name="enquiry_by_english">Enquiry By</string>
    <string name="planned_area_image_label_english">Image of Planned area</string>
    <string name="kitchen_details_english">Kitchen Details</string>
    <string name="roof_type_english">Roof Type</string>
    <string name="house_type_english">House Type</string>
    <string name="kitchen_height_english">Kitchen Height</string>
    <string name="technician_team_label_english">Technician Team</string>
    <string name="send_material_english">Send Material</string>
    <string name="cancel_order_english">Cancel Order</string>
    <string name="enquiry_english">Enquiry</string>
    <string name="technician_team_english">Technician Team</string>
    <string name="logout_english">Logout</string>
    <string name="login_english">Login</string>
    <string name="username_english">Username</string>
    <string name="password_english">Password</string>
    <string name="language_selection_english">Select Language</string>
    <string name="english">English</string>
    <string name="please_wait_english">Please Wait</string>
    <string name="login_successfully_english">Login Successful</string>
    <string name="ok_english">OK</string>
    <string name="login_failed_english">Login Failed</string>
    <string name="login_error_english">Login Error</string>
    <string name="check_internet_connection_english">Check Internet Connection</string>
    <string name="server_error_english">Server Error</string>
    <string name="network_error_english">Network Error</string>
    <string name="parse_error_english">Parse Error</string>
    <string name="unknown_error_english">Unknown Error</string>
    <string name="please_enter_password_english">Please Enter Password</string>
    <string name="please_enter_username_english">Please Enter Username</string>
    <string name="app_username_english">App Username</string>
    <string name="add_technician_english">Add Technician</string>
    <string name="technician_name_english">Enter Technician Name</string>
    <string name="technician_address_english">Enter technician Address</string>
    <string name="technician_mobile_number_english">Enter Technician Mobile Number</string>
    <string name="technician_date_of_birth_english">Select Technician Date of Birth</string>
    <string name="male_english">Male</string>
    <string name="female_english">Female</string>
    <string name="save_english">Save</string>
    <string name="mobile_number_english">Mobile Number: </string>
    <string name="sent_material_already_english">Material Already Sent</string>
    <string name="cancel_order_already_english">Order Already Canceled </string>


    <string name="cancel_order_already_marathi">ऑर्डर आधीपासून रद्द झाली आहे</string>
    <string name="sent_material_already_marathi">साहित्य आधीच पाठवलेली आहे</string>
    <string name="mobile_number_marathi">मोबाइल नंबर: </string>
    <string name="save_marathi">जतन करा</string>
    <string name="male_marathi">पुरूष</string>
    <string name="female_marathi">महिला</string>
    <string name="technician_date_of_birth_marathi">कारागीराची जन्म दिनांक निवडा</string>
    <string name="technician_mobile_number_marathi">कारागीराचा मोबाइल नंबर टाका</string>
    <string name="technician_address_marathi">कारागीराचा पत्ता टाका</string>
    <string name="technician_name_marathi">कृपया कारागीराचे नाव टाका</string>
    <string name="add_technician_marathi">कारागीराचा जोडा</string>
    <string name="app_username_marathi">अॅप वापरकर्त्याचे नाव</string>
    <string name="please_enter_username_marathi">कृपया युजरनेम टाका </string>
    <string name="please_enter_password_marathi">कृपया युपासवर्ड टाका</string>
    <string name="parse_error_marathi">विश्लेषण त्रुटी</string>
    <string name="unknown_error_marathi">अज्ञात त्रुटी</string>
    <string name="network_error_marathi">नेटवर्क त्रुटी</string>
    <string name="server_error_marathi">सर्व्हर त्रुटी</string>
    <string name="check_internet_connection_marathi">इंटरनेट कनेक्शन तपासा</string>
    <string name="login_error_marathi">लॉगइन त्रुटी</string>
    <string name="login_failed_marathi">लॉगिन अयशस्वी</string>
    <string name="ok_marathi">ठीक आहे</string>
    <string name="login_successfully_marathi">लॉगिन यशस्वी</string>
    <string name="please_wait_marathi">कृपया थांबा</string>
    <string name="marathi">मराठी</string>
    <string name="language_selection_marathi">भाषा निवडा</string>
    <string name="username_marathi">युझरनेम</string>
    <string name="password_marathi">पासवर्ड</string>
    <string name="login_marathi">लॉगइन</string>
    <string name="logout_marathi">लॉगऑऊट</string>
    <string name="technician_team_marathi">कारागीरांचा कार्यसंघ</string>
    <string name="enquiry_marathi">चौकशी</string>
    <string name="cancel_order_marathi">ऑर्डर रद्द करा</string>
    <string name="send_material_marathi">सामग्री पाठवा</string>
    <string name="technician_team_label_marathi">कारागीरांचा कार्यसंघ</string>
    <string name="kitchen_height_marathi">स्वयंपाकघरातील उंची</string>
    <string name="house_type_marathi">घराचा प्रकार</string>
    <string name="roof_type_marathi">छताचा प्रकार</string>
    <string name="kitchen_details_marathi">स्वयंपाकघर तपशील</string>
    <string name="planned_area_image_label_marathi">नियोजित क्षेत्राचा फोटो</string>
    <string name="enquiry_by_marathi">चौकशी करणारा</string>
    <string name="date_of_enquiry_marathi">चौकशीची तारीख</string>
    <string name="aadharno_marathi">आधार नंबर </string>
    <string name="age_marathi">वय: </string>
    <string name="village_marathi">गाव</string>
    <string name="new_enquiry_marathi">नवीन चौकशी</string>
    <string name="material_sent_marathi">सामग्री पाठविली</string>
    <string name="complete_construction_marathi">पूर्ण बांधकाम</string>
    <string name="technician_information_marathi">कारागीरांची माहिती</string>
    <string name="technician_list_marathi">कारागीरांची यादी</string>
    <string name="about_marathi">बाबत</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
