<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/enquiry_english"
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/new_enquiry"
                android:icon="@drawable/ic_headset_mic_black_24dp"
                android:title="@string/new_enquiry_english" />
            <item
                android:id="@+id/material_sent"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/material_sent_english" />
            <item
                android:id="@+id/construction_complete"
                android:icon="@drawable/ic_check_box_black_24dp"
                android:title="@string/complete_construction_english" />

            <item
                android:id="@+id/cancel_order"
                android:icon="@drawable/ic_cancel_black_24dp"
                android:title="@string/cancel_order_english" />
        </menu>
    </item>

    <item android:title="@string/technician_team_english"
        android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/technician_list"
                android:icon="@drawable/ic_group_black_24dp"
                android:title="@string/technician_list_english" />
            <item
                android:id="@+id/add_technician"
                android:icon="@drawable/ic_group_add_black_24dp"
                android:title="@string/add_technician_english" />
        </menu>
    </item>
    <group android:checkableBehavior="single">
        <item
            android:visible="false"
        android:id="@+id/setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Setting" />
        <item
        android:id="@+id/about"
        android:icon="@drawable/about"
        android:title="@string/about_english" />
        <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_arrow_back_black_24dp"
        android:title="@string/logout_english" />
    </group>
</menu>
