<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.admin.rcadmin.enquiry.EnquiryDetailsFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profileImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/profile"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="16dp"
                    android:layout_gravity="center_vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/customerName"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Mallinda Hollaway"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/customerAge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/age_marathi"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9860402800"
                        android:id="@+id/mobileNumber"/>
                    <TextView
                        android:id="@+id/villageName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/village_marathi"/>
                    <TextView
                        android:id="@+id/aadharNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/aadharno_marathi"/>
                </LinearLayout>
            </LinearLayout>
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorWhite"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date_of_enquiry_marathi"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/enquiryDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="17-01-2018"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="@color/colorDarkgray"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="right">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enquiry_by_marathi"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/enquiryBy"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Prasad Gote"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/planned_area_image_label"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/planned_area_image_label_marathi"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:gravity="center_horizontal"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/kitchen_details_marathi"
                    android:textStyle="bold"
                    android:textColor="@color/colorBlack"
                    android:gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/place_image"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:src="@drawable/plannedarea"
                    android:scaleType="fitXY"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:gravity="center_vertical"
                    android:background="@color/colorPrimary"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roof_type_marathi"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:id="@+id/roofType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Agricultural barn"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/house_type_marathi"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:id="@+id/houseType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Karvy (Kuccha house)"
                        android:textColor="@color/colorWhite"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kitchen_height_marathi"
                        android:textStyle="bold"
                        android:textColor="@color/colorWhite"
                        android:layout_marginTop="5dp"/>
                    <TextView
                        android:id="@+id/kitchenHeight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="30 Ft."
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/technician_team_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/technician_team_marathi"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/technicianRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp">
                <Button
                    android:id="@+id/btn_send_material"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/send_material_marathi"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/colorWhite"/>
                <Button
                    android:id="@+id/btn_cancel_order"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:text="@string/cancel_order_marathi"
                    android:background="@color/colorDarkgray"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_send_material"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sent_material_already_marathi"
                android:background="@color/colorDarkgray"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

    </ScrollView>

</LinearLayout>
